docs(agent): record E103 and E104 boundaries